--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,7 +104,9 @@ main{
         grid-area: bio;
         font-size: 1.5rem;
     }
-    
+    .job {
+        padding: 1rem;
+    }
     .job-1{
         grid-area: job1;
     }
